# bluespot-backend/internal/model/telegram_model.go
@@ -1,0 +1,5 @@
+package model
+
+type SendTelegramMessageRequest struct {
+	Text string `json:"text" binding:"required"`
+}
